--- a/content/docs/hook-utils.en.mdx
+++ b/content/docs/hook-utils.en.mdx
@@ -3,7 +3,7 @@ title: Custom hooks
 description: List and usage of custom utility hooks in Swell.
 ---
 
-# Custom utility hooks
+## Custom utility hooks
 
 In **Swell**, several custom React hooks are provided to simplify state management,
 user preferences or business logic on the frontend. These hooks encapsulate recurring behaviors
