--- a/content/docs/hook-utils.mdx
+++ b/content/docs/hook-utils.mdx
@@ -3,7 +3,7 @@ title: Hooks personnalisés
 description: Liste et usage des hooks utilitaires personnalisés dans Swell.
 ---
 
-# Hooks utilitaires personnalisés
+## Hooks utilitaires personnalisés
 
 Dans **Swell**, plusieurs hooks React personnalisés sont proposés pour simplifier la gestion de l’état,
 des préférences utilisateur ou de la logique métier côté front. Ces hooks encapsulent des comportements récurrents
