--- a/content/docs/loyalty.en.mdx
+++ b/content/docs/loyalty.en.mdx
@@ -26,7 +26,7 @@ description: Loyalty points system in Swell - optional feature enabled via modul
 
 In your `.env` file, configure the following parameters:
 
-```bash
+```env
 SWELL_LOYALTY_ENABLED=true
 SWELL_LOYALTY_POINTS_PER_EURO=10
 SWELL_LOYALTY_EXPIRATION_DAYS=365
@@ -45,7 +45,7 @@ SWELL_LOYALTY_MAX_DISCOUNT=50
 ### Module Activation
 
 1. **Enable the module** in `.env`:
-   ```bash
+   ```env
    SWELL_LOYALTY_ENABLED=true
    ```
 
@@ -104,7 +104,6 @@ Represents a user's points account.
 - `lifetime_points`: Total points earned since registration
 
 **Computed accessors**:
-- `available_points`: Non-expired points
 - `expiring_points`: Points expiring in the next 30 days
 
 #### LoyaltyTransaction
@@ -196,9 +195,8 @@ swell.loyalty.minimum_redeem_points: number
 
 // User account (only if logged in and module enabled)
 loyaltyAccount: {
-    points: number                // Current points
+    points: number                // Current points (available balance)
     lifetime_points: number       // Total points earned
-    available_points: number      // Non-expired points
     expiring_points: number       // Points expiring in 30 days
 } | null
 ```
