--- a/content/docs/payment.mdx
+++ b/content/docs/payment.mdx
@@ -60,27 +60,32 @@ private function formatCartItems(Collection $items)
     })->toArray();
 }
 
-public function createSessionFromSingleItem(Product $product)
+public function createSessionFromItems($productsData)
 {
+    $lineItems = $productsData->map(function ($item) {
+        $product = $item['product'];
+        $quantity = $item['quantity'];
+
+        return [
+            'price_data' => [
+                'currency' => 'EUR',
+                'unit_amount' => (int) ($product->getPrice * 100),
+                'product_data' => [
+                    'name' => $product->brand->name . ' ' . $product->name,
+                    'description' => $product->short_description,
+                    'metadata' => [
+                        'product_id' => $product->id,
+                    ],
+                ],
+            ],
+            'quantity' => $quantity,
+        ];
+    })->toArray();
+
     return auth()->user()
         ->allowPromotionCodes()
         ->checkout(
-            [
-                [
-                    'price_data' => [
-                        'currency' => 'EUR',
-                        'unit_amount' => (int) ($product->getPrice * 100),
-                        'product_data' => [
-                            'name' => $product->brand->name . ' ' . $product->name,
-                            'description' => $product->short_description,
-                            'metadata' => [
-                                'product_id' => $product->id,
-                            ],
-                        ],
-                    ],
-                    'quantity' => 1,
-                ]
-            ],
+            $lineItems,
             [
                 'customer_update' => [
                     'shipping' => 'auto',
@@ -178,12 +183,19 @@ public function checkout(CreateStripeCheckoutSession $createStripeCheckoutSessio
 }
 ```
 
-**Buy** - Méthode pour rédiriger vers la session checkout de Stripe pour un seul produit
+**Buy** - Méthode pour rédiriger vers la session checkout de Stripe pour un ou plusieurs produits
 
 ```php title="app/Http/Controllers/CartController.php"
-public function buy(Product $product, CreateStripeCheckoutSession $createStripeCheckoutSession)
+public function buy(BuyRequest $request, CreateStripeCheckoutSession $createStripeCheckoutSession)
 {
-    $session = $createStripeCheckoutSession->createSessionFromSingleItem($product);
+    $productsData = collect($request->getProducts())->map(function ($item) {
+        return [
+            'product' => Product::findOrFail($item['id']),
+            'quantity' => $item['quantity'],
+        ];
+    });
+
+    $session = $createStripeCheckoutSession->createSessionFromItems($productsData);
 
     return Inertia::location($session->url);
 }
@@ -223,7 +235,7 @@ Route::middleware(['auth', 'verified'])->group(function () {
     Route::prefix('checkout')->group(function () {
         Route::get('/', [CartController::class, 'checkout'])->name('cart.checkout');
         Route::get('/success', [CartController::class, 'success'])->name('checkout.success');
-        Route::get('/{product}', [CartController::class, 'buy'])->name('cart.buy');
+        Route::post('/', [CartController::class, 'buy'])->name('cart.buy');
     });
 
     Route::get('/orders', [OrderController::class, 'index'])->name('orders.index');
