update: mention to new util : useConfirm

--- a/content/docs/architecture.en.mdx
+++ b/content/docs/architecture.en.mdx
@@ -84,6 +84,7 @@ The modern frontend of **Swell** uses React 19 with TypeScript and Inertia.js. T
   - `CartContext.tsx`: Cart state
   - `WishlistContext.tsx`: Wishlist state
   - `ReviewContext.tsx`: Review state
+  - `ConfirmContext.tsx`: Confirmation modals management
   - Provides shared state between components
 
 - **`hooks/`**: Custom React hooks
