--- a/content/docs/architecture.mdx
+++ b/content/docs/architecture.mdx
@@ -84,6 +84,7 @@ Le frontend moderne de **Swell** utilise React 19 avec TypeScript et Inertia.js.
   - `CartContext.tsx` : État du panier
   - `WishlistContext.tsx` : État de la wishlist
   - `ReviewContext.tsx` : État des avis
+  - `ConfirmContext.tsx` : Gestion des modales de confirmation
   - Fournit un état partagé entre composants
 
 - **`hooks/`** : Hooks React personnalisés
