add date-fns to architecture

--- a/content/docs/architecture.en.mdx
+++ b/content/docs/architecture.en.mdx
@@ -96,8 +96,8 @@ The modern frontend of **Swell** uses React 19 with TypeScript and Inertia.js. T
   - Specialized utilities
 
 - **`utils/`**: Utility functions
-  - `formatCurrency()`, `formatDate()`, etc.
-  - Helpers for formatting and data manipulation
+  - `formatCurrency()`, various helpers
+  - For date formatting, the project uses **date-fns**
 
 - **`types/`**: TypeScript definitions
   - `index.d.ts`: Global types shared between frontend and backend
