--- a/content/docs/architecture.mdx
+++ b/content/docs/architecture.mdx
@@ -96,8 +96,8 @@ Le frontend moderne de **Swell** utilise React 19 avec TypeScript et Inertia.js.
   - Utilitaires spécialisés
 
 - **`utils/`** : Fonctions utilitaires
-  - `formatCurrency()`, `formatDate()`, etc.
-  - Helpers pour le formatage et la manipulation de données
+  - `formatCurrency()`, helpers divers
+  - Pour le formatage de dates, le projet utilise **date-fns**
 
 - **`types/`** : Définitions TypeScript
   - `index.d.ts` : Types globaux partagés entre frontend et backend
